backend/shipping-service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shipping-service
  labels:
    app: shipping-service
spec:
  selector:
    app: shipping-service
  ports:
    - port: 80
      targetPort: 8009
      protocol: TCP
  type: ClusterIP
